python.install_sources(
  '__init__.py',
  pure: true,
  subdir: 'lattice_data_db'
)

python.install_sources(
  'db_backend/__init__.py', 'db_backend/array_converter.py', 'db_backend/db_objecthandles.py', 'db_backend/schema.py', 'db_backend/tasks.py',
  pure: true,
  subdir: 'lattice_data_db/db_backend'
)
