python.install_sources(
  '__init__.py',
  pure: true,
  subdir: 'lattice_data_db'
)

python.install_sources(
  'db_backend/__init__.py', 'db_backend/array_converter.py', 'db_backend/db_objecthandles.py', 'db_backend/schema.py', 'db_backend/tasks.py',
  pure: true,
  subdir: 'lattice_data_db/db_backend'
)

python.install_sources(
  'aly_db/__init__.py', 'aly_db/export.py',
  pure: true,
  subdir: 'lattice_data_db/aly_db'
)
